--- a/data/output/departmental_reports/atg_budget_report.html
+++ b/data/output/departmental_reports/atg_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>ATG FY26 Operating Budget</h1>
-        <h2>ATG</h2>
+        <h2>ATTORNEY GENERAL</h2>
     </div>
     
     <div class="summary-stats">
