--- a/data/output/departmental_reports/bed_budget_report.html
+++ b/data/output/departmental_reports/bed_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>BED FY26 Operating Budget</h1>
-        <h2>BED</h2>
+        <h2>BUSINESS, ECONOMIC DEVELOPMENT & TOURISM</h2>
     </div>
     
     <div class="summary-stats">
