--- a/data/output/departmental_reports/buf_budget_report.html
+++ b/data/output/departmental_reports/buf_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>BUF FY26 Operating Budget</h1>
-        <h2>BUF</h2>
+        <h2>BUDGET AND FINANCE</h2>
     </div>
     
     <div class="summary-stats">
