--- a/data/output/departmental_reports/cch_budget_report.html
+++ b/data/output/departmental_reports/cch_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>CCH FY26 Operating Budget</h1>
-        <h2>CCH</h2>
+        <h2>CITY AND COUNTY OF HONOLULU</h2>
     </div>
     
     <div class="summary-stats">
