--- a/data/output/departmental_reports/coh_budget_report.html
+++ b/data/output/departmental_reports/coh_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>COH FY26 Operating Budget</h1>
-        <h2>COH</h2>
+        <h2>COUNTY OF HAWAII</h2>
     </div>
     
     <div class="summary-stats">
