--- a/data/output/departmental_reports/cok_budget_report.html
+++ b/data/output/departmental_reports/cok_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>COK FY26 Operating Budget</h1>
-        <h2>COK</h2>
+        <h2>COUNTY OF KAUAI</h2>
     </div>
     
     <div class="summary-stats">
