--- a/data/output/departmental_reports/def_budget_report.html
+++ b/data/output/departmental_reports/def_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>DEF FY26 Operating Budget</h1>
-        <h2>DEF</h2>
+        <h2>DEFENSE</h2>
     </div>
     
     <div class="summary-stats">
