--- a/data/output/departmental_reports/hhl_budget_report.html
+++ b/data/output/departmental_reports/hhl_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>HHL FY26 Operating Budget</h1>
-        <h2>HHL</h2>
+        <h2>HAWAIIAN HOME LANDS</h2>
     </div>
     
     <div class="summary-stats">
