--- a/data/output/departmental_reports/hth_budget_report.html
+++ b/data/output/departmental_reports/hth_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>HTH FY26 Operating Budget</h1>
-        <h2>HTH</h2>
+        <h2>HEALTH</h2>
     </div>
     
     <div class="summary-stats">
