--- a/data/output/departmental_reports/index.html
+++ b/data/output/departmental_reports/index.html
@@ -107,151 +107,151 @@
     <div class="departments-grid">
 
         <a href="hms_budget_report.html" class="dept-card">
-            <div class="dept-name">HMS</div>
+            <div class="dept-name">HUMAN SERVICES</div>
             <div class="dept-code">HMS</div>
             <div class="dept-budget">$4804.4M Total Budget</div>
         </a>
 
         <a href="buf_budget_report.html" class="dept-card">
-            <div class="dept-name">BUF</div>
+            <div class="dept-name">BUDGET AND FINANCE</div>
             <div class="dept-code">BUF</div>
             <div class="dept-budget">$4349.4M Total Budget</div>
         </a>
 
         <a href="edn_budget_report.html" class="dept-card">
-            <div class="dept-name">EDN</div>
+            <div class="dept-name">EDUCATION</div>
             <div class="dept-code">EDN</div>
             <div class="dept-budget">$3448.9M Total Budget</div>
         </a>
 
         <a href="trn_budget_report.html" class="dept-card">
-            <div class="dept-name">TRN</div>
+            <div class="dept-name">TRANSPORTATION</div>
             <div class="dept-code">TRN</div>
             <div class="dept-budget">$3427.2M Total Budget</div>
         </a>
 
         <a href="hth_budget_report.html" class="dept-card">
-            <div class="dept-name">HTH</div>
+            <div class="dept-name">HEALTH</div>
             <div class="dept-code">HTH</div>
             <div class="dept-budget">$2336.7M Total Budget</div>
         </a>
 
         <a href="uoh_budget_report.html" class="dept-card">
-            <div class="dept-name">UOH</div>
+            <div class="dept-name">UNIVERSITY OF HAWAII</div>
             <div class="dept-code">UOH</div>
             <div class="dept-budget">$1572.4M Total Budget</div>
         </a>
 
         <a href="bed_budget_report.html" class="dept-card">
-            <div class="dept-name">BED</div>
+            <div class="dept-name">BUSINESS, ECONOMIC DEVELOPMENT & TOURISM</div>
             <div class="dept-code">BED</div>
             <div class="dept-budget">$658.7M Total Budget</div>
         </a>
 
         <a href="lbr_budget_report.html" class="dept-card">
-            <div class="dept-name">LBR</div>
+            <div class="dept-name">LABOR AND INDUSTRIAL RELATIONS</div>
             <div class="dept-code">LBR</div>
             <div class="dept-budget">$483.8M Total Budget</div>
         </a>
 
         <a href="ags_budget_report.html" class="dept-card">
-            <div class="dept-name">AGS</div>
+            <div class="dept-name">ACCOUNTING AND GENERAL SERVICES</div>
             <div class="dept-code">AGS</div>
             <div class="dept-budget">$476.2M Total Budget</div>
         </a>
 
         <a href="lnr_budget_report.html" class="dept-card">
-            <div class="dept-name">LNR</div>
+            <div class="dept-name">LAND AND NATURAL RESOURCES</div>
             <div class="dept-code">LNR</div>
             <div class="dept-budget">$400.6M Total Budget</div>
         </a>
 
         <a href="psd_budget_report.html" class="dept-card">
-            <div class="dept-name">PSD</div>
+            <div class="dept-name">PUBLIC SAFETY</div>
             <div class="dept-code">PSD</div>
             <div class="dept-budget">$330.4M Total Budget</div>
         </a>
 
         <a href="def_budget_report.html" class="dept-card">
-            <div class="dept-name">DEF</div>
+            <div class="dept-name">DEFENSE</div>
             <div class="dept-code">DEF</div>
             <div class="dept-budget">$219.3M Total Budget</div>
         </a>
 
         <a href="hhl_budget_report.html" class="dept-card">
-            <div class="dept-name">HHL</div>
+            <div class="dept-name">HAWAIIAN HOME LANDS</div>
             <div class="dept-code">HHL</div>
             <div class="dept-budget">$185.2M Total Budget</div>
         </a>
 
         <a href="atg_budget_report.html" class="dept-card">
-            <div class="dept-name">ATG</div>
+            <div class="dept-name">ATTORNEY GENERAL</div>
             <div class="dept-code">ATG</div>
             <div class="dept-budget">$135.5M Total Budget</div>
         </a>
 
         <a href="cca_budget_report.html" class="dept-card">
-            <div class="dept-name">CCA</div>
+            <div class="dept-name">COMMERCE AND CONSUMER AFFAIRS</div>
             <div class="dept-code">CCA</div>
             <div class="dept-budget">$119.1M Total Budget</div>
         </a>
 
         <a href="law_budget_report.html" class="dept-card">
-            <div class="dept-name">LAW</div>
+            <div class="dept-name">LAW ENFORCEMENT</div>
             <div class="dept-code">LAW</div>
             <div class="dept-budget">$101.2M Total Budget</div>
         </a>
 
         <a href="agr_budget_report.html" class="dept-card">
-            <div class="dept-name">AGR</div>
+            <div class="dept-name">AGRICULTURE</div>
             <div class="dept-code">AGR</div>
             <div class="dept-budget">$80.7M Total Budget</div>
         </a>
 
         <a href="tax_budget_report.html" class="dept-card">
-            <div class="dept-name">TAX</div>
+            <div class="dept-name">TAXATION</div>
             <div class="dept-code">TAX</div>
             <div class="dept-budget">$43.2M Total Budget</div>
         </a>
 
         <a href="hrd_budget_report.html" class="dept-card">
-            <div class="dept-name">HRD</div>
+            <div class="dept-name">HUMAN RESOURCES DEVELOPMENT</div>
             <div class="dept-code">HRD</div>
             <div class="dept-budget">$37.1M Total Budget</div>
         </a>
 
         <a href="cok_budget_report.html" class="dept-card">
-            <div class="dept-name">COK</div>
+            <div class="dept-name">COUNTY OF KAUAI</div>
             <div class="dept-code">COK</div>
             <div class="dept-budget">$26.0M Total Budget</div>
         </a>
 
         <a href="cch_budget_report.html" class="dept-card">
-            <div class="dept-name">CCH</div>
+            <div class="dept-name">CITY AND COUNTY OF HONOLULU</div>
             <div class="dept-code">CCH</div>
             <div class="dept-budget">$10.0M Total Budget</div>
         </a>
 
         <a href="coh_budget_report.html" class="dept-card">
-            <div class="dept-name">COH</div>
+            <div class="dept-name">COUNTY OF HAWAII</div>
             <div class="dept-code">COH</div>
             <div class="dept-budget">$7.0M Total Budget</div>
         </a>
 
         <a href="gov_budget_report.html" class="dept-card">
-            <div class="dept-name">GOV</div>
+            <div class="dept-name">GOVERNOR</div>
             <div class="dept-code">GOV</div>
             <div class="dept-budget">$4.6M Total Budget</div>
         </a>
 
         <a href="ltg_budget_report.html" class="dept-card">
-            <div class="dept-name">LTG</div>
+            <div class="dept-name">LIEUTENANT GOVERNOR</div>
             <div class="dept-code">LTG</div>
             <div class="dept-budget">$2.6M Total Budget</div>
         </a>
 
         <a href="p_budget_report.html" class="dept-card">
-            <div class="dept-name">P</div>
+            <div class="dept-name">LEGISLATURE</div>
             <div class="dept-code">P</div>
             <div class="dept-budget">$0.2M Total Budget</div>
         </a>
