--- a/data/output/departmental_reports/law_budget_report.html
+++ b/data/output/departmental_reports/law_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>LAW FY26 Operating Budget</h1>
-        <h2>LAW</h2>
+        <h2>LAW ENFORCEMENT</h2>
     </div>
     
     <div class="summary-stats">
