--- a/data/output/departmental_reports/lnr_budget_report.html
+++ b/data/output/departmental_reports/lnr_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>LNR FY26 Operating Budget</h1>
-        <h2>LNR</h2>
+        <h2>LAND AND NATURAL RESOURCES</h2>
     </div>
     
     <div class="summary-stats">
