--- a/data/output/departmental_reports/ltg_budget_report.html
+++ b/data/output/departmental_reports/ltg_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>LTG FY26 Operating Budget</h1>
-        <h2>LTG</h2>
+        <h2>LIEUTENANT GOVERNOR</h2>
     </div>
     
     <div class="summary-stats">
