--- a/data/output/departmental_reports/uoh_budget_report.html
+++ b/data/output/departmental_reports/uoh_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>UOH FY26 Operating Budget</h1>
-        <h2>UOH</h2>
+        <h2>UNIVERSITY OF HAWAII</h2>
     </div>
     
     <div class="summary-stats">
