--- a/data/output/departmental_reports/agr_budget_report.html
+++ b/data/output/departmental_reports/agr_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>AGR FY26 Operating Budget</h1>
-        <h2>AGR</h2>
+        <h2>AGRICULTURE</h2>
     </div>
     
     <div class="summary-stats">
