--- a/data/output/departmental_reports/ags_budget_report.html
+++ b/data/output/departmental_reports/ags_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>AGS FY26 Operating Budget</h1>
-        <h2>AGS</h2>
+        <h2>ACCOUNTING AND GENERAL SERVICES</h2>
     </div>
     
     <div class="summary-stats">
