--- a/data/output/departmental_reports/cca_budget_report.html
+++ b/data/output/departmental_reports/cca_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>CCA FY26 Operating Budget</h1>
-        <h2>CCA</h2>
+        <h2>COMMERCE AND CONSUMER AFFAIRS</h2>
     </div>
     
     <div class="summary-stats">
