--- a/data/output/departmental_reports/edn_budget_report.html
+++ b/data/output/departmental_reports/edn_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>EDN FY26 Operating Budget</h1>
-        <h2>EDN</h2>
+        <h2>EDUCATION</h2>
     </div>
     
     <div class="summary-stats">
