--- a/data/output/departmental_reports/gov_budget_report.html
+++ b/data/output/departmental_reports/gov_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>GOV FY26 Operating Budget</h1>
-        <h2>GOV</h2>
+        <h2>GOVERNOR</h2>
     </div>
     
     <div class="summary-stats">
