--- a/data/output/departmental_reports/hms_budget_report.html
+++ b/data/output/departmental_reports/hms_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>HMS FY26 Operating Budget</h1>
-        <h2>HMS</h2>
+        <h2>HUMAN SERVICES</h2>
     </div>
     
     <div class="summary-stats">
