--- a/data/output/departmental_reports/hrd_budget_report.html
+++ b/data/output/departmental_reports/hrd_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>HRD FY26 Operating Budget</h1>
-        <h2>HRD</h2>
+        <h2>HUMAN RESOURCES DEVELOPMENT</h2>
     </div>
     
     <div class="summary-stats">
