--- a/data/output/departmental_reports/lbr_budget_report.html
+++ b/data/output/departmental_reports/lbr_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>LBR FY26 Operating Budget</h1>
-        <h2>LBR</h2>
+        <h2>LABOR AND INDUSTRIAL RELATIONS</h2>
     </div>
     
     <div class="summary-stats">
