--- a/data/output/departmental_reports/p_budget_report.html
+++ b/data/output/departmental_reports/p_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>P FY26 Operating Budget</h1>
-        <h2>P</h2>
+        <h2>LEGISLATURE</h2>
     </div>
     
     <div class="summary-stats">
