--- a/data/output/departmental_reports/psd_budget_report.html
+++ b/data/output/departmental_reports/psd_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>PSD FY26 Operating Budget</h1>
-        <h2>PSD</h2>
+        <h2>PUBLIC SAFETY</h2>
     </div>
     
     <div class="summary-stats">
