--- a/data/output/departmental_reports/tax_budget_report.html
+++ b/data/output/departmental_reports/tax_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>TAX FY26 Operating Budget</h1>
-        <h2>TAX</h2>
+        <h2>TAXATION</h2>
     </div>
     
     <div class="summary-stats">
