--- a/data/output/departmental_reports/trn_budget_report.html
+++ b/data/output/departmental_reports/trn_budget_report.html
@@ -150,7 +150,7 @@
 <body>
     <div class="header">
         <h1>TRN FY26 Operating Budget</h1>
-        <h2>TRN</h2>
+        <h2>TRANSPORTATION</h2>
     </div>
     
     <div class="summary-stats">
