millions to billions

--- a/data/output/departmental_reports/index.html
+++ b/data/output/departmental_reports/index.html
@@ -252,7 +252,7 @@
         <div class="summary-cards">
             <div class="summary-card">
                 <h3>Total Budget</h3>
-                <div class="value">$23,260M</div>
+                <div class="value">$23.3B</div>
                 <div class="label">All Departments</div>
             </div>
             <div class="summary-card">
@@ -262,8 +262,21 @@
             </div>
             <div class="summary-card">
                 <h3>Largest Department</h3>
-                <div class="value">$4,804M</div>
+                <div class="value">$4.8B</div>
                 <div class="label">HUMAN SERVICES</div>
+            </div>
+        </div>
+        
+        <div class="summary-cards">
+            <div class="summary-card">
+                <h3>Operating Budget</h3>
+                <div class="value">$19.9B</div>
+                <div class="label">All Departments Combined</div>
+            </div>
+            <div class="summary-card">
+                <h3>Capital Budget</h3>
+                <div class="value">$3.4B</div>
+                <div class="label">Capital Improvement Projects</div>
             </div>
         </div>
     </div>
@@ -280,37 +293,37 @@
         <a href="hms_budget_report.html" class="dept-card">
             <div class="dept-name">HUMAN SERVICES</div>
             <div class="dept-code">HMS</div>
-            <div class="dept-budget">$4804.4M Total Budget</div>
+            <div class="dept-budget">$4.8B Total Budget</div>
         </a>
 
         <a href="buf_budget_report.html" class="dept-card">
             <div class="dept-name">BUDGET AND FINANCE</div>
             <div class="dept-code">BUF</div>
-            <div class="dept-budget">$4349.4M Total Budget</div>
+            <div class="dept-budget">$4.3B Total Budget</div>
         </a>
 
         <a href="edn_budget_report.html" class="dept-card">
             <div class="dept-name">EDUCATION</div>
             <div class="dept-code">EDN</div>
-            <div class="dept-budget">$3448.9M Total Budget</div>
+            <div class="dept-budget">$3.4B Total Budget</div>
         </a>
 
         <a href="trn_budget_report.html" class="dept-card">
             <div class="dept-name">TRANSPORTATION</div>
             <div class="dept-code">TRN</div>
-            <div class="dept-budget">$3427.2M Total Budget</div>
+            <div class="dept-budget">$3.4B Total Budget</div>
         </a>
 
         <a href="hth_budget_report.html" class="dept-card">
             <div class="dept-name">HEALTH</div>
             <div class="dept-code">HTH</div>
-            <div class="dept-budget">$2336.7M Total Budget</div>
+            <div class="dept-budget">$2.3B Total Budget</div>
         </a>
 
         <a href="uoh_budget_report.html" class="dept-card">
             <div class="dept-name">UNIVERSITY OF HAWAII</div>
             <div class="dept-code">UOH</div>
-            <div class="dept-budget">$1572.4M Total Budget</div>
+            <div class="dept-budget">$1.6B Total Budget</div>
         </a>
 
         <a href="bed_budget_report.html" class="dept-card">
