department charts and sorting fixed

--- a/data/output/departmental_reports/index.html
+++ b/data/output/departmental_reports/index.html
@@ -565,10 +565,10 @@
             </div>
         </a>
 
-        <a href="edn_budget_report.html" class="dept-card" data-operating="3115.627838" data-capital="378.3">
+        <a href="edn_budget_report.html" class="dept-card" data-operating="3070.627838" data-capital="378.3">
             <div class="dept-name">EDUCATION</div>
             <div class="dept-code">EDN</div>
-            <div class="dept-budget">$3.5B Total Budget</div>
+            <div class="dept-budget">$3.4B Total Budget</div>
             <div class="dept-breakdown">
                 <div class="breakdown-item">
                     <span class="breakdown-label">Operating:</span>
@@ -577,6 +577,22 @@
                 <div class="breakdown-item">
                     <span class="breakdown-label">Capital:</span>
                     <span class="breakdown-value">$378M</span>
+                </div>
+            </div>
+        </a>
+
+        <a href="hth_budget_report.html" class="dept-card" data-operating="2224.523494" data-capital="112.198">
+            <div class="dept-name">HEALTH</div>
+            <div class="dept-code">HTH</div>
+            <div class="dept-budget">$2.3B Total Budget</div>
+            <div class="dept-breakdown">
+                <div class="breakdown-item">
+                    <span class="breakdown-label">Operating:</span>
+                    <span class="breakdown-value">$2.2B</span>
+                </div>
+                <div class="breakdown-item">
+                    <span class="breakdown-label">Capital:</span>
+                    <span class="breakdown-value">$112M</span>
                 </div>
             </div>
         </a>
@@ -597,23 +613,7 @@
             </div>
         </a>
 
-        <a href="hth_budget_report.html" class="dept-card" data-operating="2234.523494" data-capital="112.198">
-            <div class="dept-name">HEALTH</div>
-            <div class="dept-code">HTH</div>
-            <div class="dept-budget">$2.3B Total Budget</div>
-            <div class="dept-breakdown">
-                <div class="breakdown-item">
-                    <span class="breakdown-label">Operating:</span>
-                    <span class="breakdown-value">$2.2B</span>
-                </div>
-                <div class="breakdown-item">
-                    <span class="breakdown-label">Capital:</span>
-                    <span class="breakdown-value">$112M</span>
-                </div>
-            </div>
-        </a>
-
-        <a href="uoh_budget_report.html" class="dept-card" data-operating="1363.950984" data-capital="209.206">
+        <a href="uoh_budget_report.html" class="dept-card" data-operating="1363.165984" data-capital="209.206">
             <div class="dept-name">UNIVERSITY OF HAWAII</div>
             <div class="dept-code">UOH</div>
             <div class="dept-budget">$1.6B Total Budget</div>
@@ -625,22 +625,6 @@
                 <div class="breakdown-item">
                     <span class="breakdown-label">Capital:</span>
                     <span class="breakdown-value">$209M</span>
-                </div>
-            </div>
-        </a>
-
-        <a href="bed_budget_report.html" class="dept-card" data-operating="292.608072" data-capital="366.101">
-            <div class="dept-name">BUSINESS, ECONOMIC DEVELOPMENT & TOURISM</div>
-            <div class="dept-code">BED</div>
-            <div class="dept-budget">$659M Total Budget</div>
-            <div class="dept-breakdown">
-                <div class="breakdown-item">
-                    <span class="breakdown-label">Operating:</span>
-                    <span class="breakdown-value">$293M</span>
-                </div>
-                <div class="breakdown-item">
-                    <span class="breakdown-label">Capital:</span>
-                    <span class="breakdown-value">$366M</span>
                 </div>
             </div>
         </a>
@@ -657,22 +641,6 @@
                 <div class="breakdown-item">
                     <span class="breakdown-label">Capital:</span>
                     <span class="breakdown-value">$20M</span>
-                </div>
-            </div>
-        </a>
-
-        <a href="ags_budget_report.html" class="dept-card" data-operating="261.234034" data-capital="215.524">
-            <div class="dept-name">ACCOUNTING AND GENERAL SERVICES</div>
-            <div class="dept-code">AGS</div>
-            <div class="dept-budget">$477M Total Budget</div>
-            <div class="dept-breakdown">
-                <div class="breakdown-item">
-                    <span class="breakdown-label">Operating:</span>
-                    <span class="breakdown-value">$261M</span>
-                </div>
-                <div class="breakdown-item">
-                    <span class="breakdown-label">Capital:</span>
-                    <span class="breakdown-value">$216M</span>
                 </div>
             </div>
         </a>
@@ -709,18 +677,34 @@
             </div>
         </a>
 
-        <a href="def_budget_report.html" class="dept-card" data-operating="113.204466" data-capital="106.121">
-            <div class="dept-name">DEFENSE</div>
-            <div class="dept-code">DEF</div>
-            <div class="dept-budget">$219M Total Budget</div>
+        <a href="bed_budget_report.html" class="dept-card" data-operating="292.608072" data-capital="366.101">
+            <div class="dept-name">BUSINESS, ECONOMIC DEVELOPMENT & TOURISM</div>
+            <div class="dept-code">BED</div>
+            <div class="dept-budget">$659M Total Budget</div>
             <div class="dept-breakdown">
                 <div class="breakdown-item">
                     <span class="breakdown-label">Operating:</span>
-                    <span class="breakdown-value">$113M</span>
+                    <span class="breakdown-value">$293M</span>
                 </div>
                 <div class="breakdown-item">
                     <span class="breakdown-label">Capital:</span>
-                    <span class="breakdown-value">$106M</span>
+                    <span class="breakdown-value">$366M</span>
+                </div>
+            </div>
+        </a>
+
+        <a href="ags_budget_report.html" class="dept-card" data-operating="260.634034" data-capital="215.524">
+            <div class="dept-name">ACCOUNTING AND GENERAL SERVICES</div>
+            <div class="dept-code">AGS</div>
+            <div class="dept-budget">$476M Total Budget</div>
+            <div class="dept-breakdown">
+                <div class="breakdown-item">
+                    <span class="breakdown-label">Operating:</span>
+                    <span class="breakdown-value">$261M</span>
+                </div>
+                <div class="breakdown-item">
+                    <span class="breakdown-label">Capital:</span>
+                    <span class="breakdown-value">$216M</span>
                 </div>
             </div>
         </a>
@@ -773,14 +757,30 @@
             </div>
         </a>
 
-        <a href="law_budget_report.html" class="dept-card" data-operating="101.676615" data-capital="3.0">
-            <div class="dept-name">LAW ENFORCEMENT</div>
-            <div class="dept-code">LAW</div>
-            <div class="dept-budget">$105M Total Budget</div>
+        <a href="def_budget_report.html" class="dept-card" data-operating="113.204466" data-capital="106.121">
+            <div class="dept-name">DEFENSE</div>
+            <div class="dept-code">DEF</div>
+            <div class="dept-budget">$219M Total Budget</div>
             <div class="dept-breakdown">
                 <div class="breakdown-item">
                     <span class="breakdown-label">Operating:</span>
-                    <span class="breakdown-value">$102M</span>
+                    <span class="breakdown-value">$113M</span>
+                </div>
+                <div class="breakdown-item">
+                    <span class="breakdown-label">Capital:</span>
+                    <span class="breakdown-value">$106M</span>
+                </div>
+            </div>
+        </a>
+
+        <a href="law_budget_report.html" class="dept-card" data-operating="98.176615" data-capital="3.0">
+            <div class="dept-name">LAW ENFORCEMENT</div>
+            <div class="dept-code">LAW</div>
+            <div class="dept-budget">$101M Total Budget</div>
+            <div class="dept-breakdown">
+                <div class="breakdown-item">
+                    <span class="breakdown-label">Operating:</span>
+                    <span class="breakdown-value">$98M</span>
                 </div>
                 <div class="breakdown-item">
                     <span class="breakdown-label">Capital:</span>
@@ -805,7 +805,7 @@
             </div>
         </a>
 
-        <a href="tax_budget_report.html" class="dept-card" data-operating="43.315613" data-capital="0.0">
+        <a href="tax_budget_report.html" class="dept-card" data-operating="43.240091" data-capital="0.0">
             <div class="dept-name">TAXATION</div>
             <div class="dept-code">TAX</div>
             <div class="dept-budget">$43M Total Budget</div>
@@ -829,6 +829,54 @@
                 <div class="breakdown-item">
                     <span class="breakdown-label">Operating:</span>
                     <span class="breakdown-value">$37M</span>
+                </div>
+                <div class="breakdown-item">
+                    <span class="breakdown-label">Capital:</span>
+                    <span class="breakdown-value">$0M</span>
+                </div>
+            </div>
+        </a>
+
+        <a href="gov_budget_report.html" class="dept-card" data-operating="4.551872" data-capital="0.0">
+            <div class="dept-name">GOVERNOR</div>
+            <div class="dept-code">GOV</div>
+            <div class="dept-budget">$5M Total Budget</div>
+            <div class="dept-breakdown">
+                <div class="breakdown-item">
+                    <span class="breakdown-label">Operating:</span>
+                    <span class="breakdown-value">$5M</span>
+                </div>
+                <div class="breakdown-item">
+                    <span class="breakdown-label">Capital:</span>
+                    <span class="breakdown-value">$0M</span>
+                </div>
+            </div>
+        </a>
+
+        <a href="ltg_budget_report.html" class="dept-card" data-operating="2.563665" data-capital="0.0">
+            <div class="dept-name">LIEUTENANT GOVERNOR</div>
+            <div class="dept-code">LTG</div>
+            <div class="dept-budget">$3M Total Budget</div>
+            <div class="dept-breakdown">
+                <div class="breakdown-item">
+                    <span class="breakdown-label">Operating:</span>
+                    <span class="breakdown-value">$3M</span>
+                </div>
+                <div class="breakdown-item">
+                    <span class="breakdown-label">Capital:</span>
+                    <span class="breakdown-value">$0M</span>
+                </div>
+            </div>
+        </a>
+
+        <a href="p_budget_report.html" class="dept-card" data-operating="0.16445" data-capital="0.0">
+            <div class="dept-name">LEGISLATURE</div>
+            <div class="dept-code">P</div>
+            <div class="dept-budget">$0M Total Budget</div>
+            <div class="dept-breakdown">
+                <div class="breakdown-item">
+                    <span class="breakdown-label">Operating:</span>
+                    <span class="breakdown-value">$0M</span>
                 </div>
                 <div class="breakdown-item">
                     <span class="breakdown-label">Capital:</span>
@@ -881,54 +929,6 @@
                 <div class="breakdown-item">
                     <span class="breakdown-label">Capital:</span>
                     <span class="breakdown-value">$7M</span>
-                </div>
-            </div>
-        </a>
-
-        <a href="gov_budget_report.html" class="dept-card" data-operating="4.701872" data-capital="0.0">
-            <div class="dept-name">GOVERNOR</div>
-            <div class="dept-code">GOV</div>
-            <div class="dept-budget">$5M Total Budget</div>
-            <div class="dept-breakdown">
-                <div class="breakdown-item">
-                    <span class="breakdown-label">Operating:</span>
-                    <span class="breakdown-value">$5M</span>
-                </div>
-                <div class="breakdown-item">
-                    <span class="breakdown-label">Capital:</span>
-                    <span class="breakdown-value">$0M</span>
-                </div>
-            </div>
-        </a>
-
-        <a href="ltg_budget_report.html" class="dept-card" data-operating="2.563665" data-capital="0.0">
-            <div class="dept-name">LIEUTENANT GOVERNOR</div>
-            <div class="dept-code">LTG</div>
-            <div class="dept-budget">$3M Total Budget</div>
-            <div class="dept-breakdown">
-                <div class="breakdown-item">
-                    <span class="breakdown-label">Operating:</span>
-                    <span class="breakdown-value">$3M</span>
-                </div>
-                <div class="breakdown-item">
-                    <span class="breakdown-label">Capital:</span>
-                    <span class="breakdown-value">$0M</span>
-                </div>
-            </div>
-        </a>
-
-        <a href="p_budget_report.html" class="dept-card" data-operating="0.16445" data-capital="0.0">
-            <div class="dept-name">LEGISLATURE</div>
-            <div class="dept-code">P</div>
-            <div class="dept-budget">$0M Total Budget</div>
-            <div class="dept-breakdown">
-                <div class="breakdown-item">
-                    <span class="breakdown-label">Operating:</span>
-                    <span class="breakdown-value">$0M</span>
-                </div>
-                <div class="breakdown-item">
-                    <span class="breakdown-label">Capital:</span>
-                    <span class="breakdown-value">$0M</span>
                 </div>
             </div>
         </a>
@@ -1041,7 +1041,11 @@
             performSearch();
             
             // Default sort by operating budget (descending)
-            document.querySelector('.sort-btn[data-sort="operating"]').click();
+            const operatingBtn = document.querySelector('.sort-btn[data-sort="operating"]');
+            operatingBtn.dataset.order = 'desc';
+            operatingBtn.querySelector('.sort-arrow').textContent = '↓';
+            operatingBtn.classList.add('active');
+            sortDepartments('operating', 'desc');
         });
     </script>
                         text-align: center;
