dollar signs fixed

--- a/data/output/departmental_reports/cch_budget_report.html
+++ b/data/output/departmental_reports/cch_budget_report.html
@@ -223,11 +223,15 @@
     
     <div class="summary-stats">
         <div class="budget-card">
-            <div class="budget-amount">$0.0M</div>
+            <div class="budget-amount">
+                $0M
+            </div>
             <div class="budget-label">Total Operating</div>
         </div>
         <div class="budget-card">
-            <div class="budget-amount">$10.0M</div>
+            <div class="budget-amount">
+                $10M
+            </div>
             <div class="budget-label">Capital Improvement Projects</div>
         </div>
     </div>
@@ -236,30 +240,42 @@
         <thead>
             <tr>
                 <th>CCH FY26 Operating Budget:</th>
-                <th class="amount">$0.0 Million</th>
+                <th class="amount">
+                    $0 Million
+                </th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>General Funds:</td>
-                <td class="amount">$0.0 Million</td>
+                <td class="amount">
+                    $0M
+                </td>
             </tr>
             <tr>
                 <td>Special Funds:</td>
-                <td class="amount">$0.0 Million</td>
+                <td class="amount">
+                    $0M
+                </td>
             </tr>
             <tr>
                 <td>Federal Funds:</td>
-                <td class="amount">$0.0 Million</td>
+                <td class="amount">
+                    $0M
+                </td>
             </tr>
             <tr>
                 <td>Other Funds:</td>
-                <td class="amount">$0.0 Million</td>
+                <td class="amount">
+                    $0M
+                </td>
             </tr>
 
             <tr class="total-row">
                 <td>FY26 Capital Improvement Projects:</td>
-                <td class="amount">$10.0 Million</td>
+                <td class="amount">
+                    $10 Million
+                </td>
             </tr>
         </tbody>
     </table>
