--- a/data/output/departmental_reports/index.html
+++ b/data/output/departmental_reports/index.html
@@ -502,6 +502,11 @@
                 <div class="label">All Departments Combined</div>
             </div>
             <div class="summary-card">
+                <h3>One-Time Appropriations</h3>
+                <div class="value">$451M</div>
+                <div class="label">Special Allocations</div>
+            </div>
+            <div class="summary-card">
                 <h3>Capital Budget</h3>
                 <div class="value">$3.4B</div>
                 <div class="label">Capital Improvement Projects</div>
