--- a/data/output/departmental_reports/hrd_budget_report.html
+++ b/data/output/departmental_reports/hrd_budget_report.html
@@ -229,6 +229,10 @@
             <div class="budget-label">Operating Budget</div>
         </div>
         <div class="budget-card">
+            <div class="budget-amount">$37M</div>
+            <div class="budget-label">One-Time Appropriations</div>
+        </div>
+        <div class="budget-card">
             <div class="budget-amount">$0M</div>
             <div class="budget-label">Capital Improvement Projects</div>
         </div>
@@ -258,6 +262,26 @@
             <tr>
                 <td>Other Funds:</td>
                 <td class="amount">$5.18M</td>
+            </tr>
+            <tr class="total-row">
+                <td>FY26 One-Time Appropriations:</td>
+                <td class="amount">$37 Million</td>
+            </tr>
+            <tr>
+                <td>General Funds:</td>
+                <td class="amount">$37M</td>
+            </tr>
+            <tr>
+                <td>Special Funds:</td>
+                <td class="amount">$0M</td>
+            </tr>
+            <tr>
+                <td>Federal Funds:</td>
+                <td class="amount">$0M</td>
+            </tr>
+            <tr>
+                <td>Other Funds:</td>
+                <td class="amount">$0M</td>
             </tr>
             <tr class="total-row">
                 <td>FY26 Capital Improvement Projects:</td>
