--- a/data/output/departmental_reports/index.html
+++ b/data/output/departmental_reports/index.html
@@ -480,7 +480,7 @@
         <div class="summary-cards">
             <div class="summary-card">
                 <h3>Total Budget</h3>
-                <div class="value">$23.71B</div>
+                <div class="value">$23.75B</div>
                 <div class="label">All Departments</div>
             </div>
             <div class="summary-card">
@@ -503,7 +503,7 @@
             </div>
             <div class="summary-card">
                 <h3>One-Time Appropriations</h3>
-                <div class="value">$450.67M</div>
+                <div class="value">$487.67M</div>
                 <div class="label">Special Allocations</div>
             </div>
             <div class="summary-card">
@@ -860,15 +860,19 @@
             </div>
         </a>
 
-        <a href="hrd_budget_report.html" class="dept-card" data-operating="37.052068" data-capital="0.0" data-onetime="0.0">
+        <a href="hrd_budget_report.html" class="dept-card" data-operating="37.052068" data-capital="0.0" data-onetime="37.0">
             <div class="dept-name">HUMAN RESOURCES DEVELOPMENT</div>
             <div class="dept-code">HRD</div>
-            <div class="dept-budget">$37.05M Total Budget</div>
+            <div class="dept-budget">$74.05M Total Budget</div>
             <div class="dept-breakdown">
                 
                 <div class="breakdown-item">
                     <span class="breakdown-label">Operating:</span>
                     <span class="breakdown-value">$37.05M</span>
+                </div>
+                <div class="breakdown-item">
+                    <span class="breakdown-label">One-Time:</span>
+                    <span class="breakdown-value">$37M</span>
                 </div>
                 <div class="breakdown-item">
                     <span class="breakdown-label">Capital:</span>
